ISSUE: Redmine 681 PURPOSE: Make edit loan form save with ajax, cleanup form. DESCRIPTION: Tightening up forms, removing excess vertical whitespace in text areas.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1471,7 +1471,8 @@ select.data-entry-select:focus, select.data-entry-select.focus, select.custom-se
 	font-weight: 450;
 }
 textarea {
-	padding: .5em;
+	padding-left: .5em;
+	padding-right: .5em;
 }
 .data-entry-textarea {
 	width: 100%;
